--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,7 @@
 
 body{
 	font-family: Helvetica, sans-serif;
+
 }
 
 /***************Configurando o coantainer ***************/
@@ -10,7 +11,9 @@ background: #f48d0c url(imagens/tela-inteira.jpg) no-repeat;
 width: 1920px;
 height: 903px;
 margin: 0 auto;
+padding: 0;
 position: absolute;
+
 }
 
 /***************Configurando a Tela de login ***************/
@@ -57,7 +60,9 @@ position: absolute;
 	background:#f48d0c;
 	width: 804px;
 	height: 50px;
+	margin-top: 10px;
 	margin-left: 30px;
+	text-align: center;
 	border:1px solid #ff9a21;
 }
 
